[build-system]
requires = ["setuptools>=75.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sa_orm"
version = "0.2.0"
description = "SQL ORM kind of thing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
all = [
    "mysql-connector-python>=8.0.25",
    "psycopg>=3.0.0",
]
mysql = [ "mysql-connector-python>=8.0.25" ]
postgres = [ "psycopg>=3.0.0" ]

[tool.setuptools.packages.find]
where = ["./src"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
